--- a/journal.Rmd
+++ b/journal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Coding Journal"
+title: "Data Science for Managers: My Coding Journal"
 author: "Shawn Murray"
 date: "14/06/2020"
 output:
@@ -23,16 +23,16 @@ output:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing.
+<!-- IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing. -->
 
 
-This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+<!-- This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header. -->
 
 # My first post
 
-2018 | 7 | 23 Last compiled: `r Sys.Date()`
+2020 | 6 | 14 Last compiled: `r Sys.Date()`
 
-Notice that whatever you define as a top level header, automatically gets put into the table of contents bar on the left. 
+This is my first post. 
 
 ## Second level header
 
